# MinestomServers

./: README.md
api/: Cargo.toml
api/migrations/2022-02-16-024736_initial_migration/: down.sql  up.sql
api/src/: lib.rs
api/src/database/: mod.rs  schema.rs
api/src/database/models/: mod.rs  server.rs  server_records.rs  user.rs
api/src/database/queries/: server.rs
api/src/models/: error.rs  server.rs
api/src/routes/: mod.rs  server.rs
