[package]
name = "minestom_servers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

uuid = { version = "0.8.2", features = ["serde"] }
serde = "1"
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }

actix-web = "3"
